added story book and ui for assignment

--- a/package.json
+++ b/package.json
@@ -17,16 +17,30 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/slider": "4.4.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.17",
+    "expo-checkbox": "~2.7.0",
     "expo-constants": "~15.4.6",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
+    "expo-video": "^1.1.10",
+    "formik": "^2.4.6",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-web": "~0.19.10"
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.3.0",
+    "react-native-web": "~0.19.10",
+    "tailwindcss-react-native": "^1.7.10",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -40,6 +54,7 @@
     "@storybook/addon-ondevice-controls": "^7.6.18",
     "@storybook/addon-ondevice-notes": "^7.6.18",
     "@storybook/addon-react-native-web": "^0.0.23",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/react": "^7.6.18",
     "@storybook/react-native": "^7.6.18",
     "@storybook/react-webpack5": "^7.6.18",
@@ -49,6 +64,7 @@
     "babel-plugin-react-native-web": "^0.19.10",
     "cross-env": "^7.0.3",
     "storybook": "^7.6.18",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.3.0"
   },
   "resolutions": {
